# CSE_168_Raytracer

./: .gitignore  CMakeLists.txt  README.md  run.py
scenes/extra/: bunny.test  chris.test  cornellBunny.test  cornellGlass.test  cornellSuzanne.test  cornellTeacup.test  cornellTeapot.test  dragon.test  ggx.test  shrekBuddha.test
scenes/hw1/: scene7.test
scenes/hw2/: sphere.test
scenes/hw3/: cornellNEE.test  cornellRR.test
scenes/hw4/: chris.test  cornellBRDF.test  dragon.test  ggx.test  mis.test
src/: BRDF.cpp  BRDF.h  CliMain.cpp  Constants.h  Engine.cpp  Engine.h  GGXBRDF.cpp  Integrator.h  MathUtils.cpp  MathUtils.h  MonteCarloDirectIntegrator.cpp  PathTracerIntegrator.cpp  PhongBRDF.cpp  RayTracerIntegrator.cpp  RenderPool.cpp  RenderPool.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  VolumetricBRDF.cpp  VolumetricBSDF.cpp  VolumetricPathTracerIntegrator.cpp  WindowsMain.cpp
src/integrators/: AnalyticDirectIntegrator.cpp  Integrator.h  MonteCarloDirectIntegrator.cpp
